Rectangle gap fixed. GUI now has buildWall method that will place a wall with col, row and direction. Does not check for validity

--- a/src/main/resources/Layout.css
+++ b/src/main/resources/Layout.css
@@ -1,7 +1,5 @@
 #board {
-    -fx-background-repeat: stretch;   
-    -fx-background-position: center center;
-    -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0.5, 0); 
+    -fx-background-color: white;  
     -fx-border-color: blue;
     -fx-border-insets: 50;
     -fx-border-width: 20;
@@ -17,16 +15,16 @@
     -fx-border-width: 5;  
 }
 
-#circles {
+.circles {
     -fx-background-color: #E0FFFF;
     -fx-border-color:  #545454;
     -fx-border-style: solid;
 }
 
 #title {
-	-fx-background-color: #8B0000;
-	-fx-background-insets: 20;
-	-fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0.5, 0);
+    -fx-background-color: #8B0000;
+    -fx-background-insets: 20;
+    -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0.5, 0);
    -fx-border-insets: 20;
    -fx-border-color: yellow;
    -fx-border-radius: 20; 
